--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -1,13 +1,13 @@
 % First parameter can be changed eg to "Glossary" or something.
 % Second parameter is the max length of bold terms.
 \begin{mclistof}{List of Symbols and Abbreviations}{3.2cm}
-\item[Note] All quantities are defined in SI units unless otherwise specified throughout the thesis.
+\item[Note] All quantities are defined in SI units unless otherwise specified.
 \item[$\alpha$] Twiss parameter = $-\frac{\langle x_i x'_i \rangle}{\epsilon^i_\mathrm{rms}}$
 \item[$a_0$] Normalised vector potential $= \frac{e|\mathbf{E}_\mathrm{L}|}{m_\mathrm{e}c\omega_\mathrm{L}}$
 \item[$A$] Atomic mass number
 \item[$\mathbf{A}$] Three-vector potential
 \item[$\mathbf{A}^\mu$] Four-vector potential = $(\phi/c, \mathbf{A})$
-\item[$\beta$] Normalised speed $= v/c$ or Twiss parameter $= \frac{\langle x_i \rangle}{\epsilon^i_\mathrm{rms}}$
+\item[$\beta$] Normalised speed $= v/c$, or Twiss parameter $= \frac{\langle x_i \rangle}{\epsilon^i_\mathrm{rms}}$
 \item[$\mathbf{\beta}$] Normalised velocity $= \mathbf{v}/c$
 \item[$\mathbf{B}$] Magnetic field
 \item[$\mathbf{B}_\mathrm{L}$] Magnetic field of a laser pulse
@@ -28,7 +28,7 @@
 \item[$\mathbf{E}_\mathrm{L}$] Electric field of a laser pulse
 \item[$f$] Distribution function
 \item[$\mathbf{F}_\mathrm{L}$] Lorentz force = $q(\mathbf{E}+ \mathbf{v}\times \mathbf{B})$
-\item[$\gamma$] Lorentz/gamma factor $= \frac{1}{\sqrt{1-\beta^2}}$ or Twiss parameter $= \frac{\langle x'^2_i\rangle}{\epsilon^i_\mathrm{rms}}$ or high-energy photon
+\item[$\gamma$] Lorentz/gamma factor $= \frac{1}{\sqrt{1-\beta^2}}$, or Twiss parameter $= \frac{\langle x'^2_i\rangle}{\epsilon^i_\mathrm{rms}}$, or high-energy photon
 \item[$\eta$] Efficiency
 \item[$I$] Electromagnetic field intensity
 \item[$\mathcal{H}$] Hamiltonian
@@ -56,7 +56,8 @@
 \item[$\omega$] Angular frequency of an oscillation or low energy photon
 \item[$\omega_\mathrm{L}$] Laser pulse angular frequency
 \item[$\omega_\mathrm{p}$] Plasma frequency $= \sqrt{\frac{e^2n_\mathrm{e}}{m_\mathrm{e}\epsilon_0}}$
-\item[$\phi$] Angle of laser polarisation out of the plane of interaction or scalar electromagnetic potential
+\item[$\phi$] Angle of laser polarisation out of the plane of interaction, or scalar electromagnetic potential
+\item[$\Phi$, $\Psi$] Phase
 \item[$\mathbf{p}$] Three-momentum
 \item[$\mathbf{P}$] Pressure
 \item[$\mathbf{P}^\mu$] Four-momentum = $(U/c, \mathbf{p})$
@@ -75,7 +76,7 @@
 \item[$T_e$] Plasma electron temperature
 \item[$u,v$] Speed
 \item[$\mathbf{u},\mathbf{v}$] Velocity
-\item[$U$] Energy
+\item[$U$] Total energy
 \item[$v_\phi$] Phase velocity
 \item[$V$] Potential or volume
 \item[$w_\mathrm{L}$] Beam waist
@@ -85,7 +86,7 @@
 \item[$\mathbf{x}$, $\mathbf{y}$, $\mathbf{z}$] Vectors along each axis of the Cartesian coordinate system
 \item[$\hat{\mathbf{x}}$, $\hat{\mathbf{y}}$, $\hat{\mathbf{z}}$] Unit vectors along each axis of the Cartesian coordinate system
 \item[$Z$] Ion charge state in units of $e$
-\item[Subscripts] The following are defined the subscripts
+\item[Subscripts] 
 \item[$\mathrm{C}$] Pseudocapacitor
 \item[$\mathrm{e}$] Electron
 \item[$\gamma$] Photon
@@ -97,9 +98,6 @@
 \item[$i$, $j$] Indices
 \item[$s$] Species
 \item[$x$, $y$, $z$] Along the specific Cartesian axes
-\item[$\infty$] 
-\item[The hat symbol] To represent a normalised vecotr
-\item[primed coordinates and reference frames] Still need to sort
 
 \item[1D, 2D, 3D] One-, two- or three-dimension(al)
 \item[AOI] Angle of Incidence
