--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,3 +1,11 @@
 % Your abstract text goes here.  Check your departmental regulations, but generally this should be less than 300 words.  See the beginning of Chapter~\ref{ch:2-litreview} for more.
 
 The commissioning of multi-petawatt class laser facilities around the world is gathering pace. One of the primary motivations for these investments is the acceleration of high-quality, low-emittance electron bunches. Here we explore the interaction of a high-intensity femtosecond laser pulse with a mass-limited dense target to produce MeV attosecond electron bunches in transmission and confirm with three-dimensional simulation that such bunches have low emittance and nano-Coulomb charge. We then perform a large parameter scan from non-relativistic laser intensities to the laser-QED regime and from the critical plasma density to beyond solid density to demonstrate that the electron bunch energies and the laser pulse energy absorption into the plasma can be quantitatively described via the Zero Vector Potential mechanism. These results have wide-ranging implications for future particle accelerator science and associated technologies.
+
+Laser peak powers rise inexorably higher, enabling the study of increasingly exotic high energy density plasmas. This thesis explores one such phenomenon, that of the interaction between a relativistic laser pulse and a solid density plasma. The laser pulse is reflected but both the reflected radiation and the electron bunches that induce the interaction have fascinating properties
+
+Electron bunches 
+
+
+, including attosecond duration. Through the application of theory, simulation and experiment, this thesis strives to extend our understanding of this field and thus direct towards potential applications for these sources, primarily as a diagnostic tool. 
+
