--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -13,9 +13,9 @@ These results have excited the community to perform experiments to realise these
 This Chapter is organised as follows. Section \ref{sec:zvp-intro} outlines the \ac{ZVP} mechanism including quantitative calculations of system properties. In Section \ref{sec:zvp-3Dsimulations} the first 3D PIC simulations to observe the ZVP mechanism are presented. Further PIC simulations are presented in Section \ref{sec:zvp-bunches} focusing now on the hot electron bunches produced via the mechanism, their properties, energy scalings and implications for \ac{SF-QED}. Finally, concluding remarks are given in Section \ref{sec:zvp-conclusion}.
 
 \section{Introduction}\label{sec:zvp-intro}
-Here is presented one model for the interaction between a relativistic laser pulse and a solid density plasma: the \ac{ZVP} mechanism as proposed by \textit{Baeva et al} \cite{baevaZeroVectorPotential2011} and later developed by \textit{Savin et al} \cite{savinAttosecondscaleAbsorptionExtreme2017,savinModellingLaserPlasmaInteractions2019}. Alongside the theories of the Relativistic Electron Spring \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, gonoskovUltrarelativisticNanoplasmonicsRoute2011} and Coherent Synchrotron Emission \cite{derbruggeEnhancedRelativisticHarmonics2010}, \ac{ZVP} is a post-ponderomotive model of attosecond absorption and reflection. The model considers a quasi-static surface equilibrium state analogously to ion acceleration in the hole boring \cite{vincentiOpticalPropertiesRelativistic2014} and light sail regimes \cite{macchiTheoryLightSail2014}.
+Here is presented one model for the interaction between a relativistic laser pulse and a solid density plasma: the \ac{ZVP} mechanism as proposed by \textit{Baeva et al} \cite{baevaZeroVectorPotential2011} and later developed by \textit{Savin et al} \cite{savinAttosecondscaleAbsorptionExtreme2017,savinModellingLaserPlasmaInteractions2019}. Alongside the theories of the Relativistic Electron Spring \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, gonoskovUltrarelativisticNanoplasmonicsRoute2011} and Coherent Synchrotron Emission \cite{derbruggeEnhancedRelativisticHarmonics2010}, \ac{ZVP} is a post-ponderomotive model of attosecond absorption and reflection. The model considers a quasistatic surface equilibrium state analogously to ion acceleration in the hole boring \cite{vincentiOpticalPropertiesRelativistic2014} and light sail regimes \cite{macchiTheoryLightSail2014}.
 
-% TODO: At some point, I should briefly chat about other absorption models (I think at the end of the intro - this will also include the stuff above. - Then I will start this chapter by talking about the case where JxB does not apply. Also, in the intro specify that for an overdense plasma, the laser does not propagate and must be reflected hence we are generally talking about a laser-plasma surface interaction and the implications thereof.) Before this point, I also want to discuss preplasmas.
+% TODO: At some point, I should briefly chat about other absorption models (I think at the end of the intro - this will also include the stuff above. - Then I will start this chapter by talking about the case where JxB does not apply.
 
 An explanation for the absorption of laser energy into dense plasmas was first suggested by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the $\mathbf{J}\times \mathbf{B}$ force. This thesis is interested in the so-called `post-ponderomotive' regime where the frequency of relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then sufficiently rapid to compensate for the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, this condition suggests a criterion for the \ac{ZVP} regime, $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser will typically compress the front surface to densities such that the overdensity condition is satisfied, provided the target is of sufficient thickness. Note that neglecting the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Preplasma formation and scale length will be discussed in great detail in the later chapters. For now, assume the technology exists to sufficiently control this phenomenon. 
 
@@ -37,7 +37,6 @@ Here, the second term of Equation \ref{eq:hamiltonian_general} describes the con
 \begin{equation}\label{eq:zvp-energy_invariant}
 	\mathbf{P_\mu  P^\mu} = \frac{U^2}{c^2} - |\mathbf{p}|^2 = m^2_\mathrm{e}c^2.
 \end{equation}
-%TODO describe in abbreviations that U means total energy
 Decomposing the electron's 3-momentum into orthogonal components: $p_\mathrm{prop}$, along the laser propagation direction, $p_\mathrm{pol}$, along the polarisation axis of the laser pulse and $p_\perp$, perpendicular to both, there are two simplifications to be made. Firstly, by canonical conservation of transverse momentum, $p_\mathrm{pol} = eA$, where $A$ is the laser vector potential amplitude. Secondly, in the case of a p-polarised laser pulse (the known optimum for ZVP electron bunch generation \cite{savinAttosecondscaleAbsorptionExtreme2017} and \ac{HHG} \cite{baevaTheoryHighorderHarmonic2006}), with reference to Figure \ref{fig:zvpforcesppol} and the Lorentz force law, the forces at play confine the electron trajectory to the $p_\mathrm{prop}$-$p_\mathrm{pol}$ plane and the essential interaction geometry is two-dimensional. This is provided one considers length scales smaller than the focal spot of the laser pulse on the target, such that variation of the ponderomotive pressure with the transverse shape of the laser pulse can be neglected.
 
 % TODO potentially include a sketch of the potential well for clarity
@@ -47,8 +46,9 @@ Explicitly, the Hamiltonian can be written as
 \end{equation}
 Equation \ref{eq:hamiltonian_specific} describes a potential well that constrains the electrons: on one side is a longitudinal space charge $- e\Phi$ that prevents further propagation into the target while on the other, a term associated with the vector potential of the laser pulse, $ e^2A^2$. It is clear that should the vector potential pass through zero\footnote{Note that in writing $p_\mathrm{pol} = eA$ one has determined the gauge in which the zero becomes a defined quantity}, one of the potential well walls is totally suppressed, enabling electrons in the skin layer to escape the plasma, breaking adiabaticity. The necessity of vector potential zeroes for this violent reconstruction of the plasma surface led Baeva to coin the term `Zero Vector Potential' mechanism to describe this process \cite{baevaZeroVectorPotential2011}. Indeed, while elementary electromagnetism tells us a laser pulse will exponentially decay within a skin layer of a plasma without passing through zero, Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} demonstrated in \ac{PIC} simulations that in this non-linear regime, zeroes do exist and do propagate through the skin layer. The explanation relies on a Doppler shift in the laser field due to the relativistic motion of the ablating plasma electrons, and a mathematical formalism of this process proceeds as follows.
 
-%TODO classical interaction with a plasma and skin depth
+%TODO ~ classical interaction with a plasma and skin depth
 % TODO: \textbf{**Must also discuss the impact of relativity in creating the observed phenomena, probably at the energy scaling section.**}
+% TODO ~ add a note about interesting fact that bunch becomes more coherent during initial expulsion
 
 As the \ac{ZVP} mechanism is a relativistic phenomenon, it is absolutely essential to perform a relativistic analysis. Since all accelerated electrons travel at approximately speed $c$, surface electrons undergo similar trajectories. Acting collectively they oscillate in the laser pulse field. Consider first a transformation to the frame of reference where the laser pulse is normally incident to the plasma surface, this frame travels at velocity $\mathbf{v} = (c\sin\theta )\hat{\mathbf{y}}$ with electrons streaming at $-\mathbf{v}$. This is the Bourdier frame of reference, detailed in Appendix \ref{app:1-basics}.
 Using Equation \ref{eq:zvp-energy_invariant}, $U = \gamma m_\mathrm{e} c^2$ and integrating Equation \ref{eq:intro-transverse_momentum_differential_equation} in the boosted frame noting $p_\mathrm{T}(t=0) = \gamma_\mathbf{v} m_\mathrm{e}v =m_\mathrm{e}c \sin\theta\cos\theta$,
@@ -74,7 +74,7 @@ Transform now to the rest frame of the ablating front. Beyond the relativistic c
 \end{equation}
 where the primed symbols indicate that these quantities are measured in the rest frame of the expanding front. $A'_0$ is the vector potential amplitude and $\omega'_\mathrm{L}$ is the frequency of the laser pulse, $r'$ is the propagation distance of the laser into the plasma, $\delta'$ is the skin depth and $\hat{\mathbf{r}}'_\mathrm{pol}$ a unit vector defining the polarisation direction of the laser pulse. Un-primed coordinates will indicate the lab frame measurements.
 
-% TODO PIC simulation of surface ripples?
+% TODO ~ PIC simulation of surface ripples? do the one with two foci and reference this below
 
 While previous demonstrations of the existence of vector potential zeroes assumed that the ablation occurs normally to the plasma surface, it is necessary to confirm that zeroes are still predicted for specular ablation. Consider a p-polarised laser pulse confined to the $x$-$y$ plane incident with an angle of incidence $\theta$ on an ablating overdense plasma expanding with velocity $-v_f\hat{\mathbf{x}}$ in the lab frame, as in Figure \ref{fig:zvp_ablatingfront}.
 
@@ -132,7 +132,7 @@ The oscillatory term in Equation \ref{eq:zvp_labAfull} demonstrates the propagat
 \end{equation}
 In their original ZVP paper, Baeva laid some doubt on their version of this calculation, instead suggesting similarity theory predicts zeroes propagate at speed $c$ \cite{baevaZeroVectorPotential2011}. This is important since it directly affects the properties of the reflected radiation. It is well known that the emission of radiation occurs primarily at the point where the transverse momentum goes to zero, corresponding to the passage of the zero of the vector potential \cite{cousensElectronTrajectoriesAssociated2020} but equally that the width of the radiated pulse depends on the advance time emission point \cite{edwardsXRayEmissionEffectiveness2020}. If the zeroes moved at speed $c$, then the observed emitted pulse would be infinitely thin, producing radiation with perfect coherence in all cases. This is so in the regime detailed in Chapter \ref{ch:3-orion} where the pulse width is instead determined by the extent of radiating capability around the zero.
 
-In the ZVP regime, where distinct bunches are formed at the plasma surface and the analysis above is valid, relevant to this chapter and Chapter \ref{ch:4-gemini}, simulations have suggested finite advanced time bunch widths decreasing rapidly with increasing laser intensity \cite{edwardsXRayEmissionEffectiveness2020}. This is precisely what is predicted by Equation \ref{eq:zvp-zero_v}. As the laser intensity increases, $v_\mathrm{f}$ naturally increases. Thus, the zeroes propagate closer to the speed of light and reduce the advanced time bunch width. The burst of radiation can be described by \ac{CSE} theory \cite{derbruggeEnhancedRelativisticHarmonics2010} or at least it's modified form \cite{edwardsXRayEmissionEffectiveness2020}, thus \ac{CSE} and\ac{ZVP} are intrinsically linked, however, while CSE focuses on reflection and the \ac{HHG} spectrum, \ac{ZVP} is concerned with laser pulse energy absorption. 
+In the ZVP regime, where distinct bunches are formed at the plasma surface and the analysis above is valid, relevant to this chapter and Chapter \ref{ch:4-gemini}, simulations have suggested finite advanced time bunch widths decreasing rapidly with increasing laser intensity \cite{edwardsXRayEmissionEffectiveness2020}. This is precisely what is predicted by Equation \ref{eq:zvp-zero_v}. As the laser intensity increases, $v_\mathrm{f}$ naturally increases. Thus, the zeroes propagate closer to the speed of light and reduce the advanced time bunch width. The burst of radiation can be described by the \ac{CSE} theory of \ac{SHHG} \cite{derbruggeEnhancedRelativisticHarmonics2010} or at least it's modified form \cite{edwardsXRayEmissionEffectiveness2020}, thus \ac{CSE} and\ac{ZVP} are intrinsically linked, however, while CSE focuses on reflection and the \ac{SHHG} spectrum, \ac{ZVP} is concerned with laser pulse energy absorption. 
 
 To summarise, for a sufficiently intense laser pulse, electrons at the surface of an irradiated solid target are accelerated by the laser to relativistic velocities at a fraction of a laser pulse cycle and therefore electrons both follow similar trajectories and respond adiabatically to the $\mathbf{J}\times \mathbf{B}$ force of the laser pulse. They form into a high charge density spatially thin coherent electron bunch on the front surface of the plasma but are displaced inwards from the approximately immobile ions via the ponderomotive pressure of the laser. This charge separation generates a longitudinal electrostatic pseudocapacitor field that confines electrons to a potential well on the front surface of the plasma, preventing further propagation of the electron bunch into the plasma bulk. When the zero of the vector potential passes through the electron bunch, the ponderomotive pressure instantaneously vanishes and electrons are ejected specularly from the target, co-propagating with the zeroes of the vector potential and emitting radiation.
 
@@ -195,13 +195,13 @@ Interestingly, this analytical result predicts the trend observed by A. Savin \c
 \begin{equation}
 	\eta_\mathrm{ZVP} \sim S^{-1.000(3)},
 \end{equation}
-however, this result led A. Savin to conclude that increasing $S$ reduces absorption, increasing the energy in the reflected \ac{HHG} beam thus increasing high harmonic efficiency, seemingly in tension with the results of other works \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011,edwardsXRayEmissionEffectiveness2020} that suggest $S = 1$ is optima. The resolution arises from awareness of two distinct conversion efficiencies that describe the reflected harmonic spectrum: the total conversion efficiency into the full reflected beam and the conversion efficiency for individual harmonics. While the overall conversion into the reflected beam decreases for decreasing $S$, the slope of the harmonic spectrum becomes shallower and \ac{HHG} efficiency increases. Indeed, high harmonic efficiency necessitates high reflection inefficiencies due to the production of ZVP electron bunches as higher energy bunches produce more coherent reflected radiation \cite{edwardsXRayEmissionEffectiveness2020}. 
+however, this result led A. Savin to conclude that increasing $S$ reduces absorption, increasing the energy in the reflected \ac{SHHG} beam thus increasing high harmonic efficiency, seemingly in tension with the results of other works \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011,edwardsXRayEmissionEffectiveness2020} that suggest $S = 1$ is optima. The resolution arises from awareness of two distinct conversion efficiencies that describe the reflected harmonic spectrum: the total conversion efficiency into the full reflected beam and the conversion efficiency for individual harmonics. While the overall conversion into the reflected beam decreases for decreasing $S$, the slope of the harmonic spectrum becomes shallower and \ac{SHHG} efficiency increases. Indeed, high harmonic efficiency necessitates high reflection inefficiencies due to the production of ZVP electron bunches as higher energy bunches produce more coherent reflected radiation \cite{edwardsXRayEmissionEffectiveness2020}. 
 % Harmonic efficiencies will be discussed in more detail in the following Chapters, however, at currently accessible laser intensities, it would appear that X-ray harmonics are produced with greater efficiency for high $S$ \cite{pukhovRelativisticHighHarmonics2009}, a regime generally neglected in parameter scans given the computational and experimental challenges of accessing it.
 
 Unfortunately, it is not possible to link the energy scaling derived in this Section to \ac{CSE} since the harmonic emission occurs before the \ac{ZVP} acceleration phase. In Dromey \textit{et al}, the \ac{CSE} regime was demonstrated for the first time in transmission through thin foils, however, laser pulses are now of sufficient intensity to access \ac{CSE} in reflection from solid targets. This has been identified as a more efficient approach if it can be reached due to the production of higher density and shorter duration electron bunches and therefore brighter and more coherent \ac{CSE} \cite{edwardsElectronNanobunchWidthDominatedSpectralPower2020}. 
 
 \subsection{ZVP bunches oblique incidence scaling}
-This section is inspired by ideas from the work of Gonoskov \textit{et al} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011} and Vincenti \textit{et al} \cite{vincentiOpticalPropertiesRelativistic2014} to extend the theory of the ZVP mechanism for energy absorption to the more practical\footnote{Not only is this more feasible in experiment but has been shown to optimise HHG \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}.} case of oblique incidence. 
+This section is inspired by ideas from the work of Gonoskov \textit{et al} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011} and Vincenti \textit{et al} \cite{vincentiOpticalPropertiesRelativistic2014} to extend the theory of the ZVP mechanism for energy absorption to the more practical\footnote{Not only is this more feasible in experiment but has been shown to optimise SHHG \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}.} case of oblique incidence. 
 
 Consider again the laser pulse incident on a solid density plasma existing for $x>0$ at angle $\theta$. Transforming to the frame of reference in which the laser is normally incident (quantities in this frame are indicated by the primed symbol), the electron and ion bulk plasma species stream at velocity $\mathbf{v}_\mathrm{d} = -c \sin\theta \hat{\mathbf{y}}$.  Applying the Lorentz force law along the longitudinal direction ($\hat{\mathbf{x}}$), for a displacement of the electron fluid $x'_\mathrm{e}$ (one assumes that the expression for a single electron at the surface describes the surface since all electrons follow similar trajectories), travelling at speed $\mathbf{v'}$,
 \begin{equation}\label{eq:zvp_eq}
@@ -246,9 +246,9 @@ Again, integrating to find the work done as the electron bunch accelerates acros
 \begin{equation}\label{eq:zvp_Tzvp_theta}
 	T (\theta)=  \int \mathbf{F}\cdot\mathrm{d}\mathbf{s} = \frac{1}{2}m_\mathrm{e}c^2\frac{a^2_0}{\bar{n}_\mathrm{e}}\frac{\cos^4\theta}{(1\pm \sin\theta)^2}.
 \end{equation}
-While it was to be expected that a component of the electric field acting into or out of the plasma would change the magnitude of the displacement, this result suggests that increasing the angle of incidence can increase the electron energy gain in the enhanced cycle more than the decrease in the suppressed cycle. Note that this is to be expected as it is known that HHG efficiency is improved for non-zero angle of incidence \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020}. It would be interesting to explore whether the presence of an external magnetic field could be applied to mimic the effect of oblique incidence by replacing the magnetic field due to the uncompensated ion current.
+While it was to be expected that a component of the electric field acting into or out of the plasma would change the magnitude of the displacement, this result suggests that increasing the angle of incidence can increase the electron energy gain in the enhanced cycle more than the decrease in the suppressed cycle. Note that this is to be expected as it is known that SHHG efficiency is improved for non-zero angle of incidence \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020}. It would be interesting to explore whether the presence of an external magnetic field could be applied to mimic the effect of oblique incidence by replacing the magnetic field due to the uncompensated ion current.
 
-While this model would suggest an optimal angle for electron energy and therefore of \ac{HHG} of $\pi/2$, if $\theta > \pi/4$, then, if the relativistic electron bunch is travelling at $c$ along the specular reflection direction, the subsequent laser peak amplitude will never `catch up' with the electron bunch, and electrons can escape, generating high charge electron bunches in reflection as observed in experiment by Lin \textit{et al }\cite{linIsolatedAttosecondElectron2020}, but reducing the efficiency of HHG.
+While this model would suggest an optimal angle for electron energy and therefore of \ac{SHHG} of $\pi/2$, if $\theta > \pi/4$, then, if the relativistic electron bunch is travelling at $c$ along the specular reflection direction, the subsequent laser peak amplitude will never `catch up' with the electron bunch, and electrons can escape, generating high charge electron bunches in reflection as observed in experiment by Lin \textit{et al }\cite{linIsolatedAttosecondElectron2020}, but reducing the efficiency of SHHG.
 
 Finally, the total bunch energy as a function of $\theta$,
 \begin{equation}\label{eq:zvp_Uzvp_theta}
@@ -264,7 +264,7 @@ In her original paper on the ZVP mechanism, T. Baeva \textit{et al} \cite{baevaZ
 	\item The generation of fast electron bunches with ultra-short temporal duration;
 	\item That such fast electron bunches follow the energy scalings of equations \ref{eq:zvp_T} and total energy \ref{eq:zvp_U};
 	\item Injection of the fast electron bunches is along the propagation axis of the laser pulse;
-	\item There must be an intrinsic link between the fast electron bunches and coherent \ac{HHG};
+	\item There must be an intrinsic link between the fast electron bunches and coherent \ac{SHHG};
 \end{enumerate}
 with the moving zeroes within the skin layer being the key delineator between this post-ponderomotive regime of laser pulse energy absorption and other proposed mechanisms. While such observational requirements are far beyond the reaches of current experimental capacities, numerical simulations in both 1- \cite{baevaZeroVectorPotential2011} and 2-dimensions \cite{savinAttosecondscaleAbsorptionExtreme2017} have confirmed the above points. Now is presented the first \ac{3D} simulations attempting to demonstrate these criteria.
 
@@ -343,7 +343,7 @@ Figure \ref{fig:zvppropagatingzero} tracks the transverse momentum distribution 
 	\caption[Propagation of a vector potential zero through the ablating ZVP electron bunch.]{\textbf{Propagation of a vector potential zero through the ablating ZVP electron bunch via the proxy of transverse momentum conservation.} The zero of the vector potential exists where the transverse momentum is macroscopically zero. Each line represents a timestep with time increasing with decreasing colour. With increasing time the bunch and the zero move in the -$\hat{\mathbf{x}}$-direction with the zero overtaking the electron bunch. The inset tracks the position of the zero of the vector potential with time.}
 	\label{fig:zvppropagatingzero}
 \end{figure}
-% TODO the inset of \ref{fig:zvppropagatingzero}  has the wrong x-axis, code updated, just need to extract the plot and replace it. (plot at bunches/bunches6/bunches_3D/9/3D_analysis.ipynb)
+% TODO ~ the inset of \ref{fig:zvppropagatingzero}  has the wrong x-axis, code updated, just need to extract the plot and replace it. (plot at bunches/bunches6/bunches_3D/9/3D_analysis.ipynb)
 The zero propagates at a speed of $1.4c$, corresponding to a surface velocity of $0.71c$. In this simulation, the zero propagates through the bunch over a few nanometres and before crossing the pseudocapacitor. Since Gonoskov \textit{et al} have determined a scaling for electron bunch width \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}, calculation of the advance time bunch width, and correspondingly the duration of the attosecond pulse, only requires the calculation of the surface velocity. It is unfortunate that this emission occurs before the ZVP phase.
 
 Further simulation results a presented in Figure \ref{fig:zvp3ddynamics}.
@@ -363,7 +363,7 @@ Finally, Figure \ref{fig:zvphhgbeamfourier} compares the spectra of the reflecte
 	\label{fig:zvphhgbeamfourier}
 \end{figure}
 Individual harmonics are not resolved due to blueshifts between successive pulse cycles from considerable hole boring, a phenomenon discussed in great detail in the following Chapter. The spectrum from the circularly polarised light is typically over two orders of magnitude below that of linearly polarised light. Thus, all defining characteristics of the ZVP mechanism have been identified in 3D simulations with the notable exception of the energy scalings. Next-generation supercomputers will be required to perform such large scale parameter scans.
-% TODO: \textbf{**To do: these dynamics plots need fixing. Should add the times, also e and f have distance instead of time on the y axis, also need to convert from timstep to time. D) needs the scale changing. also, the x-axis needs to be converted to distance. Also, do I need to change the colour of that FFT graph**}
+% TODO: ~ \textbf{**To do: these dynamics plots need fixing. Should add the times, also e and f have distance instead of time on the y axis, also need to convert from timstep to time. D) needs the scale changing. also, the x-axis needs to be converted to distance. Also, do I need to change the colour of that FFT graph**}
 % TODO Add details about CSE and plot from reviewers' comments including Ey field shape. Also notes in the misc chapter about VLA etc. 
 
 \section{The ZVP electron bunch}\label{sec:zvp-bunches}
@@ -413,7 +413,7 @@ Figure \ref{fig:zvptypicalbunchlines}a compares the electron bunch energy to an 
 There is a plethora of applications for high charge, attosecond electron bunches, primarily for the purpose of resolving attosecond scale phenomena \cite{krauszAttosecondPhysics2009}. Already, femtosecond pump-attosecond probe experiments are underway \cite{calegariUltrafastElectronDynamics,takahashiNonlinearAttosecondMetrology2015} but the higher intensities and charge densities accessible in the laser-solid regime compared to in laser-gas interactions \cite{edwardsXRayEmissionEffectiveness2020, linIsolatedAttosecondElectron2020} would represent a step-change in the field by enabling atto-pump atto-probe experiments \cite{zhangGiantIsolatedAttosecond2020}. Potential applications include: electron microscopy and atomic diffraction to temporally resolve photoelectric processes such as Bragg diffraction \cite{morimotoDiffractionMicroscopyAttosecond2018}, ultra-fast electron radiography to probe the evolution of the formation of magnetic fields in dynamical systems \cite{schumakerUltrafastElectronRadiography2013} or for XFEL seeding \cite{cardenasSubcycleDynamicsRelativistic2019}: the record XFEL X-ray pulse duration stands at 280 attoseconds \cite{durisTunableIsolatedAttosecond2020}, substantially longer than the durations accessible using this technique. Electron bunches are also a promising alternative for radiotherapy due to their superior penetration depth in biotissues compared to X-rays \cite{glinecRadiotherapyLaserPlasma2006}.
 
 % TODO Cite laser and plasma wakefield studies
-Analogously to the \ac{HHG} process, rapid acceleration of an electron bunch generates a burst of radiation whose properties (brightness, coherency, duration, spectrum) are determined by the corresponding properties of the electron bunch (charge, emittance, duration and energy). Thus globally electron bunches are used as a diagnostic tool in synchrotrons and XFELs. Other acceleration mechanisms for X-ray generation include: bremmstrahlung radiation from firing the electron bunch at a secondary high-$Z$ target \cite{cordeFemtosecondRaysLaserplasma2013}, interaction with a counter-propagating laser pulse \cite{khrennikovTunableAllOpticalQuasimonochromatic2015,kulaginNonlinearReflectionHighamplitude2016} or injection into a laser or plasma wakefield accelerator, even with charge densities suitable for accession to the solid density plasma wakefield regime \cite{linIsolatedAttosecondElectron2020}. The mass-limited electron bunches produced via the ZVP mechanism have transverse emittances comparable in all planes to those conditioned in state-of-the-art nano-Coulomb electron bunch accelerators \cite{martinDiamondLightSource2020,pingProgressHEPSProject2020}. Such facilities typically produce electron bunches with geometric emittances of $\sim \unit{mm.rad}$ prior to damping ring injection \cite{christouPreInjectorLinacDiamond2004} and $\sim \unit{nm.rad}$ post-injection \cite{martinDiamondLightSource2020}. Thus, the mass-limited ZVP electron bunches are ideal candidates for the production of bright X-rays of unprecedentedly short duration and are suitable for study in the new attosecond regime with applications to physical, chemical and biological systems.
+Analogously to the \ac{SHHG} process, rapid acceleration of an electron bunch generates a burst of radiation whose properties (brightness, coherency, duration, spectrum) are determined by the corresponding properties of the electron bunch (charge, emittance, duration and energy). Thus globally electron bunches are used as a diagnostic tool in synchrotrons and XFELs. Other acceleration mechanisms for X-ray generation include: bremmstrahlung radiation from firing the electron bunch at a secondary high-$Z$ target \cite{cordeFemtosecondRaysLaserplasma2013}, interaction with a counter-propagating laser pulse \cite{khrennikovTunableAllOpticalQuasimonochromatic2015,kulaginNonlinearReflectionHighamplitude2016} or injection into a laser or plasma wakefield accelerator, even with charge densities suitable for accession to the solid density plasma wakefield regime \cite{linIsolatedAttosecondElectron2020}. The mass-limited electron bunches produced via the ZVP mechanism have transverse emittances comparable in all planes to those conditioned in state-of-the-art nano-Coulomb electron bunch accelerators \cite{martinDiamondLightSource2020,pingProgressHEPSProject2020}. Such facilities typically produce electron bunches with geometric emittances of $\sim \unit{mm.rad}$ prior to damping ring injection \cite{christouPreInjectorLinacDiamond2004} and $\sim \unit{nm.rad}$ post-injection \cite{martinDiamondLightSource2020}. Thus, the mass-limited ZVP electron bunches are ideal candidates for the production of bright X-rays of unprecedentedly short duration and are suitable for study in the new attosecond regime with applications to physical, chemical and biological systems.
 
 \subsubsection{Parameter scan of electron bunch mean energy}
 It is important to confirm that mass-limited electron bunches follow the same scaling relations as has previously been confirmed for bulk ZVP electrons in both 1D \cite{baevaZeroVectorPotential2011} and 2D \cite{savinAttosecondscaleAbsorptionExtreme2017} PIC simulations. The mean mass-limited electron bunch kinetic energies were extracted from 120 2D PIC simulations and are plotted in Figure \ref{fig:zvpmeangammas}. 
@@ -558,13 +558,9 @@ For a near-infrared laser photon of energy $\hbar \omega_\mathrm{L}$, the intera
 
 He \textit{et al} \cite{heSinglelaserSchemeObservation2021} identified an alternative mechanism for linear \ac{BW} using solid density targets, where forwards- and back-scattered high energy radiation reaction-produced photons interact within a hollowed-out plasma channel. In the geometry of interest in this thesis, while photons are produced in both directions, their production is localised to the plasma surface and at no points do their paths cross preventing the occurrence of this mechanism.
 
-% TODO: Explore transition regions, and do MORE simulations to fill in the gaps.
-
-% TODO To do: convergence of electron bunch energies with nppc and sim resolution.
-
 \subsection{Errors}
 A set of simulations was undertaken to explore the stability of some of the PIC simulation assumptions. The effect of including collisions, increasing the temperature to resolve the Debye length and particle merging were explored. The results are presented in Figure \ref{fig:zvperrorsources}. 
-% TODO: Make this plot fraction errors instead
+% TODO: ~ Make this plot fraction errors instead
 \begin{figure}
 	\centering
 	\includegraphics[width=1\linewidth]{figures/zvp/zvp_error_sources}
@@ -575,12 +571,7 @@ In general, including collisions had little to no effect on the results and chan
 
 % TODO Also perhaps put in the plot of a laser of constant intensity and variation between bunches.
 
-% TODO Also look again at fitting just to the region where the expression is valid.
-
-
-
 \section{Conclusions}\label{sec:zvp-conclusion}
-% TODO: 3D3V mention somewhere
 The Zero Vector Potential mechanism describes the post-ponderomotive rapid absorption of ultra-relativistic laser energy by a solid density overdense, collisionless and fully ionised plasma on the timescales of ion immobility. The defining characteristics of the mechanism have been identified in 3D PIC simulations including the observation of a zero of the vector potential propagating at speed $\approx 1.4c$ through a high-density ZVP electron bunch at the front surface of the plasma early in the ablative journey of the electron bunch. Simulations have suggested that from currently operational 10 PW short pulse laser facilities and foam targets, the ZVP mechanism can produce a train of attosecond duration, nano-Coulomb electron bunches, each with a transverse emittance of a few $\unit{nm.rad}$. Such charge and quality are comparable to state-of-the-art electron bunch accelerators but on paradigm-shifting timescales. Such timescales being those on which atomic processes occur, these electron bunches could be manipulated to literally `shed light' onto fundamental biological and chemical processes. Via a massive 2D PIC parameter scan the energies of such mass-limited electron bunches have been compared to those predicted by the ZVP model, identifying a range of validity for the model, specifically $a_0>10$, $S>1$. These simulations were also used to confirm the energy absorption scaling in 2D up to and into the QED regime, posing new ideas and questions for the theoretical understanding of ZVP QED. Some discussion was given on the modes of energy absorption and on simulations exploring various of the assumptions in the model.
 
 Chapter \ref{ch:4-gemini} details the upcoming GEMINI PW experiment to observe ZVP electron bunches for the first time. On the theme of experimentation, the following Chapter switches gears from absorption to reflection for the discussion of recent results on the ORION laser facility.
