--- a/text/ch4-gemini.tex
+++ b/text/ch4-gemini.tex
@@ -5,9 +5,7 @@
 \section{Overview}
 The intensity of the attosecond duration X-ray harmonics on the ORION SP1 and SP2 beamlines has been measured. Even so, the uncertainties remained large, the geometry sub-optimal and the pulse train exceedingly far from an isolated attosecond pulse. Indeed, none of the proposed mechanisms for isolation (polarisation gating, lighthouse technique, etc.) could have any hope of success. The high shot rate, few femtosecond, highly customisable GEMINI PW facility at the CLF can address all the points raised while also providing conditions suitable for the production of attosecond ZVP electron bunches discussed in Chapter \ref{ch:2-zvp}. Naturally, GEMINI PW is attended by its own suite of technical challenges. The prior chapters of this thesis formed the body of a proposal for five weeks of beam time at the facility with shot dates planned for June 2024. This chapter outlines the extensive planning process for this upcoming experiment.
 
-There are three primary experimental goals. First, to repeat the ORION experiment on GEMINI PW with an optimised geometry and thus resolve and measure the absolute intensity of X-ray harmonics, detailed in Section \ref{sec:ch4-xray}. Second, to observe ZVP electron bunches in transmission while simultaneously measuring the HHG signal they generate in reflection, detailed in Section \ref{sec:ch4-zvp}. Finally, the application of the X-ray harmonic beam in a proof of principle white light Laue diffraction setting is described in Section \ref{sec:ch4-laue}. Section \ref{sec:ch4-contrast} addresses the subject of laser contrast, a much thornier issue for the few femtosecond GEMINI beamline compared to ORION and covers the parallel experiment proposed by collaborators at Queen's University Belfast to provide some illumination to the problem at hand. Note that no petawatt class sub-100 femtosecond laser facility has observed harmonics at oblique incidence. This section will also detail the strategy of contingency should the contrast prove to be too poor for the production of harmonics. Not discussed in this chapter is the work undertaken by Elliot Denis to temporally resolve chirped harmonic beams using hyper-spectral imaging.
-
-% TODO replace HHG with SHHG
+There are three primary experimental goals. First, to repeat the ORION experiment on GEMINI PW with an optimised geometry and thus resolve and measure the absolute intensity of X-ray harmonics, detailed in Section \ref{sec:ch4-xray}. Second, to observe ZVP electron bunches in transmission while simultaneously measuring the XHHG signal they generate in reflection, detailed in Section \ref{sec:ch4-zvp}. Finally, the application of the X-ray harmonic beam in a proof of principle white light Laue diffraction setting is described in Section \ref{sec:ch4-laue}. Section \ref{sec:ch4-contrast} addresses the subject of laser contrast, a much thornier issue for the few femtosecond GEMINI beamline compared to ORION and covers the parallel experiment proposed by collaborators at Queen's University Belfast to provide some illumination to the problem at hand. Note that no petawatt class sub-100 femtosecond laser facility has observed harmonics at oblique incidence. This section will also detail the strategy of contingency should the contrast prove to be too poor for the production of harmonics. Not discussed in this chapter is the work undertaken by Elliot Denis to temporally resolve chirped harmonic beams using hyper-spectral imaging.
 
 % TODO CAD drawings overview where to put you?
 
@@ -18,7 +16,7 @@ The first action is to repeat the ORION experiment at GEMINI PW. For this purpos
 
 A parameter scan of \ac{XHHG} as a function of $S$ can be performed by varying the laser intensity, via beam apodisation, and the target material. The majority of shots will use target wheels of the relatively high damage threshold fused silica with the plan to advance to a Kapton tape. The fused silica targets are chemically etched in one corner to aid alignment.
 
-Since HHG is suppressed for circularly polarised light, bremsstrahlung emission and other X-ray production mechanisms can somewhat be ruled out by comparing the \ac{XHHG} signal observed for p- and circularly- polarised light, produced via a quarter wave plate. At \qty{45}{\degree} \ac{AOI}, however, this suppression is not total. And, the efficiency of heating is also reduced, reducing the signal from bremsstrahlung.
+Since SHHG is suppressed for circularly polarised light, bremsstrahlung emission and other X-ray production mechanisms can somewhat be ruled out by comparing the \ac{XHHG} signal observed for p- and circularly- polarised light, produced via a quarter wave plate. At \qty{45}{\degree} \ac{AOI}, however, this suppression is not total. And, the efficiency of heating is also reduced, reducing the signal from bremsstrahlung.
 
 The OHREX spectrometer design is such that its technical complexity is entirely bound to the spherically bent OHREX crystals, thus reducing the challenges of alignment \cite{beiersdorferLineshapeSpectroscopyVery2016} and replica building. It is relatively insensitive to the distances between source and crystal (2.4 m) and from crystal to image plane (0.524 m). Variation in the angle of incidence from \qty{38.7}{\degree} shifts the spectral image away from the nominal energy range. 
 % TODO am I doing this? The variation is relatively sensitive, for the quartz ($10\bar{1}1$) crystal, a change in energy of \qty{8}{\%} is obtained by a change in angle of \qty{50}{\mu rad} \cite{macdonaldAbsoluteThroughputCalibration2021}. Confirm this with Ed
@@ -40,7 +38,7 @@ A 1D PIC simulation of the GEMINI PW beamline for the planned geometry predicts 
 	\label{fig:geminixrayharmonics}
 \end{figure}
 While the spectrum is similar to that for ORION parameters, the structure of the electric field is markedly different, illustrated in Figure X
-% TODO add here the figure of the electric field.
+% TODO ~ add here the figure of the electric field.
 Since the preplasma scale length is $0.2\lambda_\mathrm{L}$, large fractions of the laser pulse energy are stored in the pseudocapacitor field on the front surface of the plasma that can then be radiated simultaneously \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011}. The ROM condition of no energy flux at the boundary is no longer valid. The reflected radiation is temporally compressed, producing attosecond pulses without the need for filtration and of greater peak intensity than that of the laser pulse. This regime is best described theoretically by the modified CSE model \cite{edwardsXRayEmissionEffectiveness2020} but the ROM model does not deviate from this significantly.
 
 Signals at the detector can be predicted using the theory of Chapter \ref{ch:3-orion} using GEMINI PW parameters. Applying ROM and hole boring theory to a fused silica target and accounting for filtering and assuming no merging of harmonics, one can anticipate signals at the OHREX crystal position of \qty{19.6}{\mu J.sr^{-1}} per harmonic at 0.6 keV for the KAP crystal and \qty{1.89}{\mu J.sr^{-1}} per harmonic at 2.405 keV for the quartz ($10\bar{1}1$) crystal. Orienting the OHREX for s-polarisation, to maximise the signal at the image plane, corresponds to an average of 3.4 photons per pixel and 0.20 photons per pixel respectively. The quantum efficiency of the detector is close to \qty{100}{\%}. These photon numbers are no less than those measured in the ORION experiment while the background will be lower due to the order of magnitude lower energy on target. Implying adequate statistics for the observation of such signals.
@@ -55,9 +53,9 @@ This experiment aspires to produce mass-limited ZVP electron bunches in the conf
 	\caption[Planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches.]{A simulation of the planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches. This novel setup enables the simultaneous measurement of attosecond ZVP electron bunches and their coherent emission of X-ray light. The GEMINI-PW laser pulse is incident at \qty{45}{\degree} on the low-density polyethylene target with a preplasma scale length of $0.2\lambda_\mathrm{L}$. For this angle of incidence, transmitted bunches and specularly reflected X-ray harmonics are produced at a frequency of $\omega_\mathrm{L}$.}
 	\label{fig:experimentsetuphhgbunches2}
 \end{figure}
-Emitted electron bunch energies are maximised by focusing the 2 micron laser spot onto the edge of a transversely mass-limited target. The simulations suggest it is possible to simultaneously measure the specularly reflected \ac{HHG} and the attosecond ZVP electron bunches that produce it. Note via equations \ref{eq:zvp_N} and \ref{eq:zvp_T}, the low-density target of Figure \ref{fig:experimentsetuphhgbunches2} is a more practical choice for the experiment relative to the aluminium targets of predominant use in Chapter \ref{ch:2-zvp}, producing larger and more energetic bunches. Both bulk and mass-limited ZVP electron bunches will be generated. Via conservation of transverse momentum, the two species will be spatially separated at the observation point with bulk bunches at lower energies, experiencing no further acceleration phases post-ZVP.
+Emitted electron bunch energies are maximised by focusing the 2 micron laser spot onto the edge of a transversely mass-limited target. The simulations suggest it is possible to simultaneously measure the specularly reflected \ac{XHHG} and the attosecond ZVP electron bunches that produce it. Note via equations \ref{eq:zvp_N} and \ref{eq:zvp_T}, the low-density target of Figure \ref{fig:experimentsetuphhgbunches2} is a more practical choice for the experiment relative to the aluminium targets of predominant use in Chapter \ref{ch:2-zvp}, producing larger and more energetic bunches. Both bulk and mass-limited ZVP electron bunches will be generated. Via conservation of transverse momentum, the two species will be spatially separated at the observation point with bulk bunches at lower energies, experiencing no further acceleration phases post-ZVP.
 
-While normal incidence was most convenient for the initial ZVP simulations, oblique incidence is better for \ac{HHG} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020} and, as can be understood from Equations \ref{eq:zvp_Tzvp_theta} and \ref{eq:zvp_Uzvp_theta}, the new energy scaling expressions, for the ZVP mechanism. Not only is oblique preferable but it is essential to mitigate damage to the laser optics via back-reflection. The \ac{HHG} beam intensity at the focus can be over 1000 times that of the incident laser pulse \cite{quereReflectingPetawattLasers2021}. It is necessary to conduct PIC code parameter scans for this new geometry.
+While normal incidence was most convenient for the initial ZVP simulations, oblique incidence is better for \ac{SHHG} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020} and, as can be understood from Equations \ref{eq:zvp_Tzvp_theta} and \ref{eq:zvp_Uzvp_theta}, the new energy scaling expressions, for the ZVP mechanism. Not only is oblique preferable but it is essential to mitigate damage to the laser optics via back-reflection. The \ac{SHHG} beam intensity at the focus can be over 1000 times that of the incident laser pulse \cite{quereReflectingPetawattLasers2021}. It is necessary to conduct PIC code parameter scans for this new geometry.
 
 High target edge precision is essential for the generation of attosecond duration ZVP electron bunches. The CLF Target Fabrication team has produced 200 $\mu$m silicon wafer targets with well-defined edges of sub-micron precision via the Bosch process. The target design is presented in Figure \ref{fig:geminisiliconwafer}a.
 \begin{figure}
@@ -66,7 +64,7 @@ High target edge precision is essential for the generation of attosecond duratio
 	\caption[Attosecond ZVP electron bunch targets]{\textbf{Targets designed for observation of ZVP electron bunches.} a) Target array design with conical array holder and tapered finger, lengths in mm. b) Scan of the etched wafer, striations develop towards target rear due to etching technique. c) A 3D plot of surface variation. Scalloping and striations are visible but too small to interfere with laser pulse transmission at \qty{45}{\degree}. d) Lineouts of c), the $y$-profile is along the target edge of interest.}
 	\label{fig:geminisiliconwafer}
 \end{figure}
-The tapered finger structure adds a failure point to mitigate damage to adjacent targets from shock propagation. The cone of the array holder is of sufficient size for the full laser pulse to access the target edge. Scans, detailed in Figure \ref{fig:geminisiliconwafer}, found an average surface roughness of \qty{74.4}{nm}. The etching technique leads to scalloping of the surface parallel to the target surface and perpendicular striations towards the target rear. Neither pose any concern with regard to interference with the laser pulse in transmission. The target design and scans were performed by Sam Astbury \cite{astburyTargetFabricationGroup2024}. Before firing target edges, HHG production will be optimised for unstructured silicon wafer targets, providing information on the bulk propagating ZVP electron bunches for comparison with the mass-limited case. Again, a quarter-wave plate can be implemented to suppress the ZVP mechanism in the absence of vector potential zeroes.
+The tapered finger structure adds a failure point to mitigate damage to adjacent targets from shock propagation. The cone of the array holder is of sufficient size for the full laser pulse to access the target edge. Scans, detailed in Figure \ref{fig:geminisiliconwafer}, found an average surface roughness of \qty{74.4}{nm}. The etching technique leads to scalloping of the surface parallel to the target surface and perpendicular striations towards the target rear. Neither pose any concern with regard to interference with the laser pulse in transmission. The target design and scans were performed by Sam Astbury \cite{astburyTargetFabricationGroup2024}. Before firing target edges, SHHG production will be optimised for unstructured silicon wafer targets, providing information on the bulk propagating ZVP electron bunches for comparison with the mass-limited case. Again, a quarter-wave plate can be implemented to suppress the ZVP mechanism in the absence of vector potential zeroes.
 
 Some relaxation can be anticipated in the requirement for sub-micron precision. There will be some target smoothing via preplasma expansion and the smoothing effect of the main pulse interaction as noted by Dromey \textit{et al} \cite{dromeyDiffractionlimitedPerformanceFocusing2009}. Furthermore, transmission direction is dictated by laser vector potential and not surface angle, unlike reflection. At worst, ZVP energy scalings will be mildly affected by the change in angle. Thus tape drives will also be explored as an option. However, the \qty{50}{\mu m} jitter of such devices predicts a low success rate of $\sim$ 4 \%. Regardless, the gathering of sufficient statistics is not necessarily unreasonable with the high shot rate of GEMINI PW. Shot-to-shot variations in laser pulse focal spot position are typically on the order of the focal spot itself. It is likely therefore that a third of silicon wafer target shots will hit an adequate portion of the target edge. 
 
@@ -77,7 +75,6 @@ Resolving the \qty{16}{\mu m} GEMINI PW spot is significantly more challenging t
 The size of the wedge hole must be established. Sitting somewhere between the near and far field, to first order, rays from all parts of the spot are lost equally through the hole in the wedge. After passing through the optical system, therefore, the wedge hole should simply reduce the signal at the image plane and not affect the resolution. Nonetheless, this should be modelled. One could argue that the wedge can reduce the spherical aberration by the removal of paraxial rays. The larger the hole the less likely the clipping of the potentially highly divergent high harmonic beam. Eventually, this will impact the third harmonic image resolution. At a minimum, the OHREX crystal must be fully illuminated requiring a half angle of \qty{0.71}{\degree}.
 %TODO decribe B integral
 
-%TODO double-check these numbers
 Applying the extended ZVP theory to the oblique incidence case for GEMINI PW parameters predicts electron bunches with a charge of $\approx$10 nC and energy of $\approx$30 MeV. Thus, a \qty{15}{\mu m} aluminium foil filter will reject the laser light without significantly affecting the electron bunches.
 % TODO calculate the angle of electron bunch and divergence in a sim
 Firstly, mass-limited and bulk electron bunch trajectories and beam divergences will be imaged on a LANEX screen. An MeV electron spectrometer aligned to the target edge can then measure the time-integrated energy spectrum. The spatially separated bunch types can be independently measured by adjusting the spectrometer position. Mordovanakis \textit{et al} used Image Plate stacks to obtain the electron bunch structure and emission angle. This may prove necessary if the bunch types overlap due to high divergence \cite{mordovanakisQuasimonoenergeticElectronBeams2009}. 
@@ -86,9 +83,9 @@ While resolving attosecond durations remains a serious technical challenge of ex
 \cite{linIsolatedAttosecondElectron2020}.
 
 
-% TODO add somewhere: Note that in the absence of attosecond resolution diagnostics, measuring the harmonic spectrum of the coherent \ac{HHG} is the only way to reconstruct the temporal shape of the pulse. Simulations have suggested that the reflected spectrum produced by Coherent Synchrotron Emission of the electron bunches is approximately Fourier-limited \cite{cousensElectronTrajectoriesAssociated2020}.
+% TODO add somewhere: Note that in the absence of attosecond resolution diagnostics, measuring the harmonic spectrum of the coherent \ac{SHHG} is the only way to reconstruct the temporal shape of the pulse. Simulations have suggested that the reflected spectrum produced by Coherent Synchrotron Emission of the electron bunches is approximately Fourier-limited \cite{cousensElectronTrajectoriesAssociated2020}.
 
-\section{Application of HHG to white light Laue diffraction}\label{sec:ch4-laue}
+\section{Application of XHHG to white light Laue diffraction}\label{sec:ch4-laue}
 The eventual but still somewhat distant goal is the creation of an attosecond X-ray diagnostic to illuminate crystal dynamics on attosecond timescales. Inspired by Laue diffraction measurements demonstrating dislocation microstructure of shocked crystals \cite{suggitNanosecondWhitelightLaue2012}, this will be a proof of principle test of Laue diffraction from an X-ray harmonic beam of a single unshocked crystal.
 
 It was Laue diffraction that led to the discovery of Bragg's law,
@@ -101,9 +98,9 @@ This will be attempted using the \ac{BBXRD} diagnostic placed in the path of the
 
 \section{Contrast}\label{sec:ch4-contrast}
 \subsection{Contrast on GEMINI PW}
-% Observation of the ZVP mechanism and HHG production requires a sufficiently steep density gradient at the laser-plasma interface. An inevitable challenge of \ac{CPA} laser systems is the existence of prepulses that heat targets, causing them to expand significantly before the arrival of the main pulse. To increase the laser contrast, to the point where there is no preplasma formation, GEMINI-PW utilises a Double Plasma Mirror setup prior to the main interaction \cite{doumyCompleteCharacterizationPlasma2004}. Investigation of preplasma generation will occur in parallel to the main experimental goals.
+% Observation of the ZVP mechanism and SHHG production requires a sufficiently steep density gradient at the laser-plasma interface. An inevitable challenge of \ac{CPA} laser systems is the existence of prepulses that heat targets, causing them to expand significantly before the arrival of the main pulse. To increase the laser contrast, to the point where there is no preplasma formation, GEMINI-PW utilises a Double Plasma Mirror setup prior to the main interaction \cite{doumyCompleteCharacterizationPlasma2004}. Investigation of preplasma generation will occur in parallel to the main experimental goals.
 
-An underlying current of this thesis has been the subject of prepulse and corresponding preplasma expansion. While bright X-ray harmonics have been observed on both the Vulcan \cite{dromeyBrightMultikeVHarmonic2007} and ORION sub-ps laser systems, few cycles laser pulse systems routinely underperform versus expectations. To date only at normal incidence (thus minimising heating) have harmonics been observed on GEMINI PW \cite{dromeyCoherentSynchrotronEmission2013}. Evidence points to preplasma formation. The only parameter that can suppress HHG from a p-polarised relativistic laser pulse is an overlarge preplasma \cite{dollarScalingHighorderHarmonic2013} and indeed the transition to suppression is rapid \cite{kahalyDirectObservationDensityGradient2013}. While there exists established theories on the operation of plasma mirrors, these are based on fairly large assumptions that remain untested. Given the notoriety of the challenge of observing SHHG despite laser contrast being a relatively well-understood concept, and the general successes attributed to hydrodynamic codes, it seems quite possible that these large assumptions are the critical concern. They could also be responsible for the range of optimal scale lengths observed in experiments. 
+An underlying current of this thesis has been the subject of prepulse and corresponding preplasma expansion. While bright X-ray harmonics have been observed on both the Vulcan \cite{dromeyBrightMultikeVHarmonic2007} and ORION sub-ps laser systems, few cycles laser pulse systems routinely underperform versus expectations. To date only at normal incidence (thus minimising heating) have harmonics been observed on GEMINI PW \cite{dromeyCoherentSynchrotronEmission2013}. Evidence points to preplasma formation. The only parameter that can suppress SHHG from a p-polarised relativistic laser pulse is an overlarge preplasma \cite{dollarScalingHighorderHarmonic2013} and indeed the transition to suppression is rapid \cite{kahalyDirectObservationDensityGradient2013}. While there exists established theories on the operation of plasma mirrors, these are based on fairly large assumptions that remain untested. Given the notoriety of the challenge of observing SHHG despite laser contrast being a relatively well-understood concept, and the general successes attributed to hydrodynamic codes, it seems quite possible that these large assumptions are the critical concern. They could also be responsible for the range of optimal scale lengths observed in experiments. 
 
 The most recently available contrast measurements of the GEMINI PW laser are presented in Figure \ref{fig:geminicontrast}. 
 \begin{figure}
@@ -132,20 +129,18 @@ To distinguish the probe beam from the bright non-linear target interaction, it 
 \subsubsection{Strategy}
 A series of contingencies has been developed to ensure the observation of harmonics under the assumption that preplasma scale length is the main issue. Phases increase in cost to peak laser intensity and therefore to the theoretical harmonic limit. During optimisation, the OHREX will be replaced with an XUV angularly-resolved spectrometer. As of 2019, no experiment to confirm HB theory had been performed on a PW system \cite{vincentiAchievingExtremeLight2019}. Such XUV spectrometer measurements could be very interesting both to confirm the HB theory in the PW regime and to infer the intensity increase at PM focus. The first step will be to scan through the focal spot of the laser. Wavefront curvature at the target from slight defocussing can reduce divergence from hole boring thus increasing intensity levels at the detector while also reducing pre-heating. 
 
-The next action will be to apodise the beam, again this reduces the intensity on target and the harmonic beam divergence and has been shown to tip preplasma scale length into the optimal regime for HHG \cite{kahalyDirectObservationDensityGradient2013}. This will reduce the intrinsic prepulse intensity by the same factor as the main pulse. To ensure the SHHG roll-off is above the 2.4 keV harmonics (such that the signal on OHREX is non-negligible), requires $a_0 > 8$. Such apodisation would reduce the prepulse by $\approx$ 10 times and corresponds to a reduction in the beam radius by a factor of 2. While harmonics were observed on the 1 J precursor to GEMINI PW, Astra-Gemini, apodising back to Astra-Gemini parameters does not guarantee success, the new front end produces a unique prepulse profile.
+The next action will be to apodise the beam, again this reduces the intensity on target and the harmonic beam divergence and has been shown to tip preplasma scale length into the optimal regime for SHHG \cite{kahalyDirectObservationDensityGradient2013}. This will reduce the intrinsic prepulse intensity by the same factor as the main pulse. To ensure the SHHG roll-off is above the 2.4 keV harmonics (such that the signal on OHREX is non-negligible), requires $a_0 > 8$. Such apodisation would reduce the prepulse by $\approx$ 10 times and corresponds to a reduction in the beam radius by a factor of 2. While harmonics were observed on the 1 J precursor to GEMINI PW, Astra-Gemini, apodising back to Astra-Gemini parameters does not guarantee success, the new front end produces a unique prepulse profile.
 
 The intensity on DPM can be reduced leading to later switch-on times but a lower peak reflectivity. Failing that, there are more drastic measures available. First, a second target chamber layout has been designed that will reduce the angle of incidence on target to \qty{30}{\degree} to reduce target heating and second, frequency doubling is known to significantly enhance contrast. In fact, as with ORION this will likely overshoot, producing effectively zero preplasma.
 
-Testing frequency doubling would be very useful for demonstrating the validity of the new contrast theory. The frequency doubling crystal available at GEMINI PW will reduce the intensity on target both from the generation efficiency (\qty{25}{\%}) and apodisation (\qty{9}{\%}) (the crystal has a diameter of 60 mm), therefore if there is an improvement in signal, it must be from the improvement to contrast. While Kahaly \textit{et al} were able to observe harmonics for a beam apodised to $a_0 = 0.7$, provided the scale length was optimised, resorting to this method to produce harmonics would preclude the observation of X-ray harmonics. However, it would justify the investment into a larger frequency-doubling crystal for future HHG experiments at GEMINI PW. Such a setup would not require a DPM and the diffraction-limited spot is smaller. Hence, despite the inevitability of efficiency cost due to the frequency doubling process, similar intensities on target could be realised provided a 25 \% efficiency non-apodising frequency-doubling crystal.
+Testing frequency doubling would be very useful for demonstrating the validity of the new contrast theory. The frequency doubling crystal available at GEMINI PW will reduce the intensity on target both from the generation efficiency (\qty{25}{\%}) and apodisation (\qty{9}{\%}) (the crystal has a diameter of 60 mm), therefore if there is an improvement in signal, it must be from the improvement to contrast. While Kahaly \textit{et al} were able to observe harmonics for a beam apodised to $a_0 = 0.7$, provided the scale length was optimised, resorting to this method to produce harmonics would preclude the observation of X-ray harmonics. However, it would justify the investment into a larger frequency-doubling crystal for future XHHG experiments at GEMINI PW. Such a setup would not require a DPM and the diffraction-limited spot is smaller. Hence, despite the inevitability of efficiency cost due to the frequency doubling process, similar intensities on target could be realised provided a 25 \% efficiency non-apodising frequency-doubling crystal.
 
-Once harmonics are visible, aspects of the system can be changed and the opacity and early switch-on hypotheses can be tested by looking for quantitative improvements to the signal. Replacing the pure fused silica target with impure BK7 or AR-coated targets should reduce the harmonic signal. Equally, replacing the first PM in the DPM chain with an uncoated PM should delay the PM switch on and improve the signal. Note that the CWE signal is distinguishable from the HHG signal: it is more divergence and experiences a sharp cutoff at the plasma frequency \cite{kahalyDirectObservationDensityGradient2013}.
+Once harmonics are visible, aspects of the system can be changed and the opacity and early switch-on hypotheses can be tested by looking for quantitative improvements to the signal. Replacing the pure fused silica target with impure BK7 or AR-coated targets should reduce the harmonic signal. Equally, replacing the first PM in the DPM chain with an uncoated PM should delay the PM switch on and improve the signal. Note that the CWE signal is distinguishable from the SHHG signal: it is more divergence and experiences a sharp cutoff at the plasma frequency \cite{kahalyDirectObservationDensityGradient2013}.
 
 \subsection{Kahaly mirror}
 At some point, the signal will overshoot and enter the CWE regime, preferably early in the list of contingencies presented. At this point, the preplasma scale length can now be optimised. Kahaly \textit{et al} \cite{kahalyDirectObservationDensityGradient2013} designed a simple but elegant method to do this. Simply partially cover a mirror in the laser chain with a small mirror. The difference in path length of light on this mirror is determined by the mirror thickness and distance from the main laser mirror surface. Thus the arrival time at the target of this added prepulse can be controlled. Since this has effectively apodised the beam, the parabola will then focus the prepulse spot to a larger area compared to the main pulse spot ensuring a uniform preplasma across the main spot while the diffraction-limited main spot will experience minimal aberration from the subtracted prepulse. The target must be routinely monitored to ensure the prepulse spot coincides with the main pulse spot. The mirror should have a mirrored back surface and an AR-coated front surface with a slight angle between the two faces to prevent any parasitic prepulse.
 
-Kahaly \textit{et al} show a linear relationship between main pulse delay relative to prepulse and scale length (due to more time for the preplasma to expand) but also note that for the same scale length, a larger delay (accompanied by smaller energy in the prepulse) produces higher quality harmonics. This could be understood as a natural consequence of the lower plasma temperatures, which improve the ability of the system to perform coherent SHHG behaviour. If harmonics are accessed using the Kahaly method, the signal could be improved by moving the prepulse mirror further from the main pulse mirror while also reducing the fraction of overlap between the two mirrors to reduce the energy in the prepulse. The Kahaly mirror should be placed before the final mirror before the parabola. The further back in the chain it is placed, the greater the danger of diffraction from the mount causing damage to the optical system. The linear relationship between main pulse delay and scale length coupled with the XUV HHG signal measurements will quantify contrast improvements for discrete changes to the system.
+Kahaly \textit{et al} show a linear relationship between main pulse delay relative to prepulse and scale length (due to more time for the preplasma to expand) but also note that for the same scale length, a larger delay (accompanied by smaller energy in the prepulse) produces higher quality harmonics. This could be understood as a natural consequence of the lower plasma temperatures, which improve the ability of the system to perform coherent SHHG behaviour. If harmonics are accessed using the Kahaly method, the signal could be improved by moving the prepulse mirror further from the main pulse mirror while also reducing the fraction of overlap between the two mirrors to reduce the energy in the prepulse. The Kahaly mirror should be placed before the final mirror before the parabola. The further back in the chain it is placed, the greater the danger of diffraction from the mount causing damage to the optical system. The linear relationship between main pulse delay and scale length coupled with the XUV SHHG signal measurements will quantify contrast improvements for discrete changes to the system.
 
 \section{Summary}
 This chapter has detailed the strategy, goals and hypotheses surrounding the upcoming GEMINI PW experiment, including supporting PIC and hydrodynamic simulations. It may prove that the contrast of GEMINI PW is insufficient to enable access to the highly interesting XHHG. However, should this be the case, a strong plan of action has been laid out that should both enable some level of success in harmonic generation and provide invaluable insights that could change the approach to SHHG experiments in the future. If harmonics can be resolved, there are many exciting avenues for new physics. Namely, the main experimental goals are the resolution of X-ray harmonics, the observation of ZVP electron bunches, the application of the harmonic beam as a diagnostic tool and the measurement of attosecond chirp on optical and XUV harmonics.
-
-%TODO add a comment about the use of HHG as a heating source, highly efficient highly penetrating
