--- a/text/ch5-summary.tex
+++ b/text/ch5-summary.tex
@@ -14,8 +14,8 @@ Chapter \ref{ch:4-gemini} brought both previous chapters together, discussing th
 \section{Beyond GEMINI PW and future work}\label{sec:ch4-beyond}
 While all of Savin's suggestions have been explored, as is the nature of scientific research, new results are a chain reaction, producing an exponential expansion of ideas. Many of the theoretical ideas of this thesis will not be tested in the upcoming experiment but could form part of future beamtime proposals. It would be particularly interesting to demonstrate in experiment the heating effect of the XHHG beam or to attempt a more direct inference of the new peak intensity of the magnified harmonic beam. X-ray measurement on GEMINI could be combined with one of the isolating attosecond pulse ideas, for example, polarisation gating, to generate and measure the intensity of an isolated attosecond X-ray pulse. To fully probe ZVP theory would require a full parameter scan in target density. Foam targets would gain access to the optimal low $S$ regime \cite{bataniPhysicsIssuesShock2014} without the need for preplasma formation. To truly demonstrate the attosecond duration of the ZVP electron bunches would require imaging of their XUV CTR harmonics.
 
-On the side of the simulations, it is indispensable, to test the new predictions for oblique incidence energy scalings and total electron bunch charge along with the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of the preplasma scale length. In this work, it was assumed that the optima for electron bunch production are simply those for \ac{HHG}, as was shown to be true for preplasma scale length in the Supplementary Information of \cite{thevenetVacuumLaserAcceleration2016} for their electron bunches in reflection. 
+On the side of the simulations, it is indispensable, to test the new predictions for oblique incidence energy scalings and total electron bunch charge along with the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of the preplasma scale length. In this work, it was assumed that the optima for electron bunch production are simply those for \ac{SHHG}, as was shown to be true for preplasma scale length in the Supplementary Information of \cite{thevenetVacuumLaserAcceleration2016} for their electron bunches in reflection. 
 
 Now that attosecond ZVP electron bunches can be produced, options must be explored for their guidance and application. The QED ZVP produced several interesting results. It must be redressed to understand the rapid rise in BW energy and justify the theory for the transition to QED and look further for the transition to SF-QED. Computational limits precluded the full reconstruction of the ORION X-ray harmonic beam even in 1D. These limits could be stretched by the arrival of GPU supercomputing architectures, currently being tested on ARCHER2. 
 
-The return of SHHG study to the CLF after more than a decade hiatus is certainly an indicator of the wider renewed interest in the field. This is in part spurred on by the recent Nobel Prize for attosecond physics and the rapid adoption of multi-petawatt class facilities globally. Vulcan 20-20 is only around the corner. Set to be the world's most powerful laser, this ambitious laser facility will provide 200 J in 20 fs. With the capability to access triple digits of peak normalised vector potentials, it is ideally suited to the study of X-ray HHG and ZVP. The GEMINI PW experiment will build expertise providing proof of principle results with a bright future in mind.
+The return of SHHG study to the CLF after more than a decade hiatus is certainly an indicator of the wider renewed interest in the field. This is in part spurred on by the recent Nobel Prize for attosecond physics and the rapid adoption of multi-petawatt class facilities globally. Vulcan 20-20 is only around the corner. Set to be the world's most powerful laser, this ambitious laser facility will provide 200 J in 20 fs. With the capability to access triple digits of peak normalised vector potentials, it is ideally suited to the study of XHHG and ZVP. The GEMINI PW experiment will build expertise providing proof of principle results with a bright future in mind.
